--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "winston": "^3.13.0",
-    "winston-loki": "^6.0.8"
+    "winston-loki": "^6.0.8",
+    "xss": "^1.0.15"
   }
 }
